[package]
name = "wasmtime-ruby"
version = "0.1.0"
authors = ["David Cristofaro <david@dtcristo.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
rutie = "0.7.0"
walrus = "0.13"
wasm-webidl-bindings = "0.6"
wasmtime = "0.8.0"
wasmtime-interface-types = "0.8.0"
